tests/ui/endpoint/async_state.stderr
error: Endpoint handler functions that are async must not take `&State` as an argument, consider taking `&mut State`
  --> $DIR/async_state.rs:10:19
   |
10 | async fn read_all(state: &State) {}
   |                   ^^^^^
